# mcp-base-cli

./: .gitignore  BUILD_CHECKLIST.md  CLAUDE.md  README.md  publish.py  pyproject.toml
.devcontainer/: post-create.sh
src/mcp_base/: __init__.py  add_user.py  cli.py  create_secrets.py  make_config.py  setup_auth0.py  setup_generic.py  setup_oidc.py
src/mcp_base_tools/: __init__.py  cli.py  create_secrets.py  setup_oidc.py  setup_rbac.py
