[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-base"
version = "0.3.0"
description = "CLI tools for MCP (Model Context Protocol) server setup and management with OIDC support (Auth0, Dex, Keycloak)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "MCP Base Contributors" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "oidc",
    "auth0",
    "dex",
    "keycloak",
    "kubernetes",
    "cli",
    "devops"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
kubernetes = [
    "kubernetes>=28.0.0",
    "cryptography>=41.0.0",
]
all = [
    "mcp-base[kubernetes]",
]
dev = [
    "mcp-base[all]",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/your-org/mcp-base"
Documentation = "https://github.com/your-org/mcp-base#readme"
Repository = "https://github.com/your-org/mcp-base.git"
Issues = "https://github.com/your-org/mcp-base/issues"

[project.scripts]
mcp-base = "mcp_base.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CLAUDE.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_base"]

# Ensure all Python files and py.typed marker are included
[tool.hatch.build.targets.wheel.force-include]
"src/mcp_base/py.typed" = "mcp_base/py.typed"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
